--- a/app/styles.css
+++ b/app/styles.css
@@ -5,64 +5,56 @@ body {
 }
 
 .container {
-  min-height: 100vh;
-  background-color: #fce7f3;
+  background-color: #FFDBDB;
+  width: 100%;
+  height: 100vh;
+  color: #1e1e1e;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  padding: 1rem;
-  position: relative;
+  position: absolute;
   overflow: hidden;
-}
-
-.form-container {
-  width: 100%;
-  max-width: 28rem;
-  position: relative;
   z-index: 10;
 }
 
 .logo-container {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 2rem;
+  position: absolute;
+  padding: 2rem;
+  top: 0;
+  right: 0;
+  z-index: 10;
+}
+
+
+.form-container {
+  background-color: white;
+  margin: auto;
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  border-radius: 1.25rem;
+  width: 100%;
+  max-width: 32rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10;
 }
 
 .content {
-  background-color: white;
-  border-radius: 0.5rem;
-  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
   padding: 1.5rem;
+  height: fit-content;
 }
-
-@media (min-width: 768px) {
-  .content {
-    padding: 2rem;
-  }
-}
-
 .heading {
-  font-size: 1.5rem;
+  text-align: center;
+  font-size: 2rem;
   font-weight: 700;
   margin-bottom: 1rem;
 }
 
-@media (min-width: 768px) {
-  .heading {
-    font-size: 1.875rem;
-  }
-}
-
 .text {
-  font-size: 0.875rem;
+  text-align: center;
+  font-size: 1rem;
   margin-bottom: 1rem;
-}
-
-@media (min-width: 768px) {
-  .text {
-    font-size: 1rem;
-  }
 }
 
 .select-container {
@@ -79,12 +71,6 @@ body {
   font-size: 0.875rem;
 }
 
-@media (min-width: 768px) {
-  .select {
-    font-size: 1rem;
-  }
-}
-
 .select-icon {
   position: absolute;
   right: 0.5rem;
@@ -94,20 +80,15 @@ body {
 
 .button {
   width: 100%;
-  background-color: #dc2626;
+  background-color: #960912;
   color: white;
   padding: 0.5rem;
-  border-radius: 0.25rem;
+  border-radius: 3.125rem;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 0.875rem;
-}
-
-@media (min-width: 768px) {
-  .button {
-    font-size: 1rem;
-  }
+  font-weight: bold;
 }
 
 .button-icon {
@@ -116,6 +97,7 @@ body {
 
 .form-group {
   margin-bottom: 1rem;
+  font-size: 0.875rem;
 }
 
 .label {
@@ -124,24 +106,12 @@ body {
   font-size: 0.875rem;
 }
 
-@media (min-width: 768px) {
-  .label {
-    font-size: 1rem;
-  }
-}
-
 .input {
   width: 100%;
   padding: 0.5rem;
   border: 1px solid #d1d5db;
   border-radius: 0.25rem;
   font-size: 0.875rem;
-}
-
-@media (min-width: 768px) {
-  .input {
-    font-size: 1rem;
-  }
 }
 
 .textarea {
@@ -153,8 +123,22 @@ body {
   resize: vertical;
 }
 
-@media (min-width: 768px) {
-  .textarea {
-    font-size: 1rem;
+@media (max-width: 768px) {
+
+  .logo-container {
+    position: relative;
+  }
+  .logo-container img{
+    max-height: 2rem;
+    max-width: 5rem;
+  }
+
+  .form-container {
+    position: absolute;
+    background-color: white;
+    padding: 1rem;
+    box-shadow: 0 -0.5rem 1rem rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease-in-out;
   }
 }
+
