--- a/app/styles.css
+++ b/app/styles.css
@@ -45,12 +45,24 @@ body {
 .heading {
   font-size: 1.5rem;
   font-weight: 700;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 @media (min-width: 768px) {
   .heading {
     font-size: 1.875rem;
+  }
+}
+
+.subheading {
+  font-size: 0.875rem;
+  color: #4B5563;
+  margin-bottom: 0.5rem;
+}
+
+@media (min-width: 768px) {
+  .subheading {
+    font-size: 1rem;
   }
 }
 
@@ -157,4 +169,30 @@ body {
   .textarea {
     font-size: 1rem;
   }
+}
+
+.underlined {
+  position: relative;
+  display: inline-block;
+}
+
+.underlined::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: -3px;
+  height: 1px;
+  background-color: #4B5563;
+}
+
+.info-text-container {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.form-header {
+  text-align: left;
+  margin-bottom: 1.5rem;
 }
