--- a/app/styles.css
+++ b/app/styles.css
@@ -2,48 +2,40 @@
 
 body {
   font-family: 'Montserrat', sans-serif;
+  background-color: pink;
+  height: 100vh;
 }
 
-.container {
-  background-color: #FFDBDB;
-  width: 100%;
-  height: 100vh;
-  color: #1e1e1e;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: absolute;
-  overflow: hidden;
-  z-index: 10;
-}
 
 .logo-container {
+  padding-top: 2rem;
+  padding-right: 2rem;
   position: absolute;
-  padding: 2rem;
+  display: fill;
   top: 0;
   right: 0;
-  z-index: 10;
 }
 
-
+/* Form styles */
 .form-container {
+  color: #1E1E1E;
   background-color: white;
-  margin: auto;
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
   border-radius: 1.25rem;
   width: 100%;
   max-width: 32rem;
   position: absolute;
-  top: 50%;
   left: 50%;
+  top: 50%;
   transform: translate(-50%, -50%);
-  z-index: 10;
 }
 
 .content {
-  padding: 1.5rem;
+  padding: 2rem;
+  box-sizing: border-box;
   height: fit-content;
 }
+
 .heading {
   text-align: center;
   font-size: 2rem;
@@ -57,26 +49,6 @@ body {
   margin-bottom: 1rem;
 }
 
-.select-container {
-  position: relative;
-  margin-bottom: 1rem;
-}
-
-.select {
-  width: 100%;
-  padding: 0.5rem;
-  border: 1px solid #d1d5db;
-  border-radius: 0.25rem;
-  appearance: none;
-  font-size: 0.875rem;
-}
-
-.select-icon {
-  position: absolute;
-  right: 0.5rem;
-  top: 50%;
-  transform: translateY(-50%);
-}
 
 .button {
   width: 100%;
@@ -94,51 +66,6 @@ body {
 .button-icon {
   margin-left: 0.5rem;
 }
+/* end of form styles */
 
-.form-group {
-  margin-bottom: 1rem;
-  font-size: 0.875rem;
-}
-
-.label {
-  display: block;
-  margin-bottom: 0.5rem;
-  font-size: 0.875rem;
-}
-
-.input {
-  width: 100%;
-  padding: 0.5rem;
-  border: 1px solid #d1d5db;
-  border-radius: 0.25rem;
-  font-size: 0.875rem;
-}
-
-.textarea {
-  width: 100%;
-  padding: 0.5rem;
-  border: 1px solid #d1d5db;
-  border-radius: 0.25rem;
-  font-size: 0.875rem;
-  resize: vertical;
-}
-
-@media (max-width: 768px) {
-
-  .logo-container {
-    position: relative;
-  }
-  .logo-container img{
-    max-height: 2rem;
-    max-width: 5rem;
-  }
-
-  .form-container {
-    position: absolute;
-    background-color: white;
-    padding: 1rem;
-    box-shadow: 0 -0.5rem 1rem rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease-in-out;
-  }
-}
 
