--- a/app/styles.css
+++ b/app/styles.css
@@ -9,31 +9,32 @@ body {
 
 .logo-container {
   padding-top: 2rem;
-  padding-right: 2rem;
+  padding-right: 0rem;
   position: absolute;
   display: fill;
-  top: 0;
-  right: 0;
+  top: 1;
+  right: 2px;
 }
-
-/* Form styles */
+/*form-styles*/
 .form-container {
-  color: #1E1E1E;
+  color: #1e1e1e;
   background-color: white;
-  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
   border-radius: 1.25rem;
   width: 100%;
   max-width: 32rem;
   position: absolute;
   left: 50%;
-  top: 50%;
+  top: 65%;
   transform: translate(-50%, -50%);
 }
 
+
 .content {
-  padding: 2rem;
+  padding: 1rem;
   box-sizing: border-box;
-  height: fit-content;
+  height: fit100content;
 }
 
 .heading {
@@ -48,7 +49,6 @@ body {
   font-size: 1rem;
   margin-bottom: 1rem;
 }
-
 
 .button {
   width: 100%;
@@ -66,6 +66,7 @@ body {
 .button-icon {
   margin-left: 0.5rem;
 }
+
 /* end of form styles */
 
 
